--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "react",
     "react-hooks",
     "jsx-a11y",
-    "import"
+    "import",
+    "n"
   ],
   "extends": [
     "eslint:recommended",
@@ -19,6 +20,9 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/no-explicit-any": "error",
+    "n/no-process-env": [
+      "error"
+    ],
     "@typescript-eslint/no-unused-vars": [
       "warn"
     ],
