--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,3 @@
 {
-  "printWidth": 90,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "semi": false,
-  "useTabs": false,
-  "bracketSameLine": false,
-  "jsxSingleQuote": false,
-  "arrowParens": "always",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "trailingComma": "all"
 }
