--- a/package.json
+++ b/package.json
@@ -3,43 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@arcjet/next": "^1.0.0-alpha.23",
-    "@hookform/resolvers": "^3.9.0",
-    "@nextui-org/react": "^2.4.6",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "framer-motion": "^11.3.31",
-    "gsap": "^3.13.0",
-    "lucide-react": "^0.436.0",
-    "next": "14.2.7",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.3.0",
-    "webhook-discord": "^3.7.8",
-    "zod": "^3.23.8"
+    "@heroui/react": "^2.8.2",
+    "framer-motion": "^12.23.12",
+    "next": "15.4.6",
+    "prettier": "^3.6.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^5.2.1",
+    "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.4.6",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.7",
-    "eslint-plugin-n": "^17.17.0",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "15.4.6",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
