--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/inspect": "1.0.0-beta.11",
+    "@arcjet/next": "1.0.0-beta.11",
     "@heroui/react": "^2.8.2",
     "@iconify/react": "^6.0.0",
     "framer-motion": "^12.23.12",
